GregorianCalendar, updated dependencies, DATE type in GMT time zone
Changed from "Calendar.getInstance()" to "new GregorianCalendar()"
to work correctly independent of locale settings.

Updated for compatibility with aocode-public-3.0.0.

Specific management of time zones